--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,7 +8,7 @@ networks:
 services:
   library:
     volumes:
-      - "../../FINTAG/custom/php.ini:/etc/php/8.1/cli/conf.d/99-sail.ini"
+      - "../custom/php.ini:/etc/php/8.1/cli/conf.d/99-sail.ini"
       - "/Users/wehmamxx/Library/Application Support/mkcert:/etc/certs"
     labels:
       - 'traefik.enable=true'
