--- a/docker/8.1/supervisord.conf
+++ b/docker/8.1/supervisord.conf
@@ -12,3 +12,15 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=/usr/bin/php /var/www/html/artisan queue:work --tries=3
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+numprocs=1
+redirect_stderr=true
+stopwaitsecs=3600
+stdout_logfile_maxbytes=5MB
